--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -45,7 +45,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 10px;
+  gap: 50px;
   transition: opacity 0.3s ease;
   justify-content: center;
   max-width: 100%;
@@ -64,6 +64,7 @@
   border: 1px solid #c9a46b;
   color: rgb(255, 255, 255);
   font-size: 2rem;
+  height: 100px;
   cursor: pointer;
   border-radius: 10px;
   transition: background 0.3s ease, color 0.3s ease, transform 0.3s ease;
