--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -241,7 +241,7 @@
   overflow: hidden;
   
   /* Add background image for desktop */
-  background-image: url('/Romano-Exp/images/new-image.jpg');
+  background-image: url('/Romano-Exp/images/dream.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
